[package]
name = "refchannel"
description = "simple channel for passing references between threads [deprecated]"
version = "0.0.2"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
repository = "https://github.com/tmccombs/refchannel-rs"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
